# Bookshelf

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  deps.py  init_db.py  main.py
backend/app/models/: __init__.py  book.py  copy.py  loan.py  series.py  setting.py
backend/app/routers/: auth.py  books.py  copies.py  history.py  loans.py  lookup.py  series.py  settings.py
backend/app/schemas/: book.py  copy.py  loan.py  series.py  settings.py
backend/app/services/: barcode.py  dolt.py  isbn_lookup.py
dolt/: init.sql
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: books.ts  client.ts  copies.ts  history.ts  loans.ts  series.ts  settings.ts
frontend/src/components/: BookCard.tsx  Layout.tsx  LoginModal.tsx  StarRating.tsx
frontend/src/hooks/: useAuth.ts  usePageTitle.ts  useScanner.ts
frontend/src/pages/: AddBook.tsx  BookDetail.tsx  Browse.tsx  Dashboard.tsx  History.tsx  Loans.tsx  Scan.tsx  SeriesDetail.tsx  SeriesList.tsx  Settings.tsx
